layouts/basic/skins/twilight/style.css
/* ... */
.tl-slide-scrollable-container,
.tl-slide-content{
	width:100% !important;
}
.tl-attribution{
	display:none;
}
.commentsBar{
	position: relative;
	top: 0px;
	left: 0;
	background: #eee; 
	padding-bottom: 8px;
}
.fieldLabel .HelpInfoPopover {
	margin-left: 2px;
}
.jstree-node .jstree-category, .jstree-node .jstree-edit{
	margin-left: 10px;
	font-size: 15px;
	top: 0;
	vertical-align: middle;
}
.jstree-node input{
	color: #000;
}
.widgetContainer select[multiple]{
	height: 0px;
}
.alphabetBtnContainer{
	width: auto;
}
.detailViewTitle .btn-toolbar .btn-group:first-child {
	margin:0;
}
.select2-dropdown ul[aria-multiselectable="true"]  [aria-selected="true"] {
	display:none;
}
.quickCreateContent .massEditTable{
	border: 1px solid #ddd;
}
.quickCreateContent .eventsTable td{
	padding-left:0;
	padding-right:0;
}
.tagAsterisk{
	font-size: 12px;
	padding:0 5px;
	border-bottom-left-radius: 15px !important;
	border-top-left-radius: 15px !important;
	background:#5bc0de;
	border-color:#46b8da;
	color:#fff;
}
.tagText{
	background:#5bc0de;
	border-color:#46b8da;
	color:#fff;
	padding: 0px 12px;
}
.tagText::-webkit-input-placeholder { 
	color:#b1e5f4; 
}
.tagText::-moz-placeholder { 
	color:#b1e5f4; 
}
.tagText::-ms-input-placeholder { 
	color:#b1e5f4; 
}
.tagInputs{
	height:20px;
	max-width:170px;
	margin-bottom:5px;
	margin-right: 5px;
}
.tagInputs .btn{
	height: 20px !important;
	font-size:12px;
	padding:0 5px;
}
.tagInputs .form-control{
	height: 20px !important;
}
.inventoryItems{
	table-layout: fixed;
}
.inventoryItems .colName {
	width: 25%;
}
.modal-full{
	width: 95% !important;
	max-width: 1250px;
}
.dateTimeField .date{
	margin-right: -2px;
}
.dateTimeField .date span{
	border-top-right-radius:0px !important;
	border-bottom-right-radius:0px !important;
}
.dateTimeField .time input{
	border-top-left-radius:0px !important;
	border-bottom-left-radius:0px !important;
}
#quickCreate .modal-body{
	max-height: none !important;
}
.hideToggleSiteBarRightButton{
	right: 0px;
}
.blockContainer .blockHeader,
.detailViewTable .blockHeader{
	cursor: pointer;
	display:inline-block;
	width:100%;
}
.detailViewTable .blockHeader .iconCollapse{
	padding: 10px;
}
.blockHeader .iconCollapse h4{
	display: inline-block;
	margin: 0 5px;
}
.detailViewTable .fieldLabel.medium,
.detailViewTable .fieldValue.medium{
	padding: 10px;
	min-height: 40px;
}
.detailViewTable .fieldLabel.narrow,
.detailViewTable .fieldValue.narrow{
	padding: 5px;
	min-height: 25px;
}
.detailViewTable .fieldLabel.wide,
.detailViewTable .fieldValue.wide{
	padding: 15px;
	min-height: 50px;
}
.detailViewTable .fieldsLabelValue::before {
    content: "";
    float: left;
    position: absolute;
    top: 0;
    left: 0px;
    height: 100%;
    border-right: 1px solid #ddd;
	z-index: 10;
}
select.form-control {
	padding-right: 0;
	padding-top: 0;
	padding-bottom: 0;
}
.table .chosen-container{
	height: auto;
}
.addCommentBlock .commentcontent{
	resize: vertical;
}
.detailViewTitle .hierarchy{
	position: absolute;
	top: -10px;
	left: 55px;
}
.indexContainer{
	padding-top:10px;
	border-top: 4px solid #404952;
}
.detailViewHeaderFields .detailViewHeaderFieldsContent{
	max-width: 300px;
}
.detailViewHeaderFields .detailViewHeaderFieldsName{
	display: inline-block;
	float: left;
}
.detailViewHeaderFields .detailViewHeaderFieldsValue{
	display: inline-block;
	float: right;
}
.detailViewHeaderFields .detailViewHeaderFieldsValue .badge{
	padding: 3px 10px !important;
	margin: 2px 0px;
}
#calendarview .listViewButton{
	padding-left: 0.8em !important;
	padding-right: 0.8em !important;
}
.width1per7{
	width: 14.28%;
	float: left;
}
.quickCreateContent .addedNearCalendarEvent td{
	padding: 4px;
}
#cur_events td,
#cur_events .table th{
	background: #E1FFE5;
}
.quickCreateContent #Calendar_editView_fieldName_date_start{
	background-color : #E1FFE5; 
}
.eventsTable table th{
	border-bottom: 3px solid #000;
}
.quickCreateContent .weekend,
.quickCreateContent .weekend:hover{
	background: #D7EEFF !important;
}
.knowledgePresentationContent {
	color: #000;
	min-height: 450px;
}
.knowledgePresentationControl {
	width: 10%;
}
.knowledgePresentationInner {
	position: relative;
	min-height: 1px;
	padding-right: 15px;
	padding-left: 15px;
	width: 80%;
	margin-left: 10%;
	float: left;
}
.panelTree{
	border-right: 1px solid #eee;
}
.listLastDocuments li{
	list-style: none;
	font-size: 12px;
	padding-bottom: 10px;
}
.listLastDocuments li span{
	padding-right: 5px;
}
.customViewList table td{
	vertical-align: middle !important;
}
.customViewList .ui-sortable-helper{
	background-color: #dff0d8 !important;
}
.knowledgeBaseDetails {
	padding: 15px;
}

